syntax = "proto3";
package types;
option go_package = "github.com/kysee/arcanus/types/trxs";

message TrxProto {
  uint32 version = 1;
  int64 time = 2;
  uint64 nonce = 3;
  bytes from = 4;
  bytes to = 5;
  bytes _amount = 6;
  bytes _gas = 7;
  int32 type = 8;
  bytes _payload = 9;
  bytes sig = 10;
}

message TrxPayloadUnstakingProto {
  bytes tx_hash = 1;
}

message TrxPayloadExecContractProto {
  bytes _code = 1;
}

message TrxPayloadProposalProto {
  string message = 1;
  int64 votingBlocks = 2;
  int64 lazyApplyingBlocks = 3;
  int32 proposalType = 4;
  repeated bytes options = 5;
}

message TrxPayloadVoteProto {
  bytes txhash = 1;
  int32 choice = 2;
}